# nested-pipelines

./: pyproject.toml
examples/: combine.py  download.py  nested.py  parse.py
nested_pipelines/: pipeline.py  types.py
nested_pipelines/components/: __init__.py  common.py
nested_pipelines/components/templates/: combine.jinja  download.jinja  parse.jinja
tests/: conftest.py  test_pipelines.py
