[tool.poetry]
name = "nested-pipelines"
version = "0.1.0"
description = ""
authors = ["Greg Larmore <greg.larmore@maxar.com>"]
readme = "README.md"
packages = [
    {include = "nested_pipelines"},
]
include = ["nested_pipelines/py.typed", "nested_pipelines/components/templates/*.yaml"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.2"
kfp = "^1.8.13"
smart-open = "^6.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
